--- a/Project/output2.html
+++ b/Project/output2.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Survey Responses</title>
+    <title>All Survey Responses</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 </head>
 <body>
-    <h1>Survey Responses</h1>
+    <h1>All Survey Responses</h1>
     <div class="upload-container">
         <input type="file" id="fileInput" accept=".xlsx, .xls" style="display: none;">
         <label for="fileInput" class="custom-file-upload">Choose File</label>
@@ -59,9 +59,9 @@
                     <div class="resizer resizer-b"></div>
                     <div class="resizer resizer-rb"></div>
             </div>
-                <!--button for 2nd page-->
+                <!--button for 1st page-->
                 <div class="button-container">
-                    <button id="viewAllDataBtn" class="view-all-btn"><i class="bi bi-arrow-right"></i> View All Data</button>
+                    <button id="viewSingleFileBtn" class="view-single-btn"><i class="bi bi-arrow-left"></i> Back to Single File View</button>
                 </div>
         </div>
     
